# variables

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/manage-tickets/: SKILL.md
mise/: config.toml
mise/tasks/: check-code  close-issue  close-ticket  open-issue  open-ticket
src/radium226/variables/: __init__.py  app.py  click.py  files.py  spi.py  types.py  variables.py
src/radium226/variables/backends/: dummy.py
src/radium226/variables/backends/age/: __init__.py  age-passphrase.expect  age.py  key_pair.py  passphrase.py  types.py
tests/: test_backends.py  test_variables.py
tests/samples/: age.key  decrypted.yaml  encrypted.yaml
