[project]
name = "radium226-variables"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13,<3.14"
dependencies = [
    "click>=8.3.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/radium226/variables"]

[dependency-groups]
dev = [
    "faker>=37.8.0",
    "mypy>=1.18.1",
    "pytest>=8.4.2",
    "pytest-custom-exit-code>=0.3.0",
    "ruff>=0.13.0",
    "types-pyyaml>=6.0.12.20250915",
]

[project.scripts]
variables = "radium226.variables:app"


[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
incremental = false
ignore_errors = false
pretty = true
show_error_context = true
show_traceback = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--capture=no",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]


[project.entry-points."radium226.variables.backend"]
dummy = "radium226.variables.backends.dummy"
age = "radium226.variables.backends.age"
